# draft

./: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/components/: body-field.tsx  document-draft.tsx  draft-body.tsx  tip.tsx  title-field.tsx
backend/: app.py  main.py  pyproject.toml  render.yaml
backend/api/: routes.py
backend/api/predict/: routes.py
backend/api/predictions/: io.py  routes.py
backend/api/samples/: io.py  routes.py
backend/api/suggestions/: io.py  routes.py
backend/models/: samples.py
backend/modules/suggestions/: models.py  module.py
backend/providers/splitting/: semantic.py
backend/src/api/: routes.py
backend/src/api/generations/: io.py  routes.py
backend/src/api/samples/: io.py  routes.py
backend/src/api/suggestions/: io.py  routes.py
backend/src/globals/: environment.py
backend/src/models/: samples.py
backend/src/modules/bias/: module.py
backend/src/modules/bias/src/: frequency.py  words.py
backend/src/modules/suggestions/: models.py  module.py
backend/src/providers/splitting/: base.py  semantic.py
extension/: background.ts  components.json  package.json  pnpm-lock.yaml  style.css  tailwind.config.js
extension/src/: content.tsx  main.css
frontend/: database.types.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend-new/: package.json  pnpm-lock.yaml  schema.ts  tailwind.config.ts
frontend-new/actions/: train.ts
frontend-new/app/: globals.css
frontend-new/modules/: training.ts
frontend/app/: globals.css  (+2 more)
(+91 files in other folders)
