[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Farouk Charkas <farouk.charkas@gmail.com>"]
readme = "BACKEND.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.1"}
pydantic = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"