[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "BACKEND.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.114.1"}
pydantic = "^2.9.1"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
